--- a/opencv.html
+++ b/opencv.html
@@ -124,7 +124,7 @@ if (backgroundMat !== null) {
       }
     };
   </script>
-  <script async src="http://127.0.0.1:9080/OpenCV_JS/opencv.js"></script>
+  <script async src="opencv.js"></script>
 
   <!-- App Logic -->
   <script>
