--- a/opencv.html
+++ b/opencv.html
@@ -112,7 +112,7 @@ if (backgroundMat !== null) {
     let Module = {
       locateFile: function (path, prefix) {
         if (path.endsWith(".wasm")) {
-          return "bookC_OpenCV/" + path;
+          return "" + path;
         }
         return prefix + path;
       },
