--- a/opencv.html
+++ b/opencv.html
@@ -112,7 +112,7 @@ src.copyTo(dst);
     let Module = {
       locateFile: function (path, prefix) {
         if (path.endsWith(".wasm")) {
-          return "http://127.0.0.1:9080/OpenCV_JS/" + path;
+          return "" + path;
         }
         return prefix + path;
       },
@@ -124,7 +124,7 @@ src.copyTo(dst);
       }
     };
   </script>
-  <script async src="http://127.0.0.1:9080/OpenCV_JS/opencv.js"></script>
+  <script async src="opencv.js"></script>
 
   <!-- App Logic -->
   <script>
